Fixed image sizing issues, mostly fixed grid layout issues, fixed CSS crash where it tried to register CSS folder multiple times

--- a/css/app.css
+++ b/css/app.css
@@ -55,6 +55,11 @@ input[type="text"] {
     margin-top: 0 !important;
 }
 
+.img-overlay {
+    background-size: cover !important;
+    height: 100%;
+}
+
 /* Modify placeholder text */
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: #c1891b;
